--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <h2>Here</h2>
 <h3 id="then">Then</h3>
 <p>Put whatever you want</p>
-<p>They will</p>
+<p>They will be</p>
 </section><section id="vertical" class="slide level2">
 <h2>Vertical</h2>
 <p>See?</p>
